// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCard renders in bento 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 14,
          "padding": 16,
          "shadowColor": "rgba(0,0,0,0.1)",
          "shadowOffset": {
            "height": 0,
            "width": NaN,
          },
          "shadowOpacity": 1,
          "shadowRadius": 0,
        }
      }
    >
      <Text>
        Hello
      </Text>
    </View>
  </View>
</View>
`;

exports[`ClayCard renders in clay 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 16,
          "padding": 18,
          "shadowColor": "rgba(58,42,32,0.12)",
          "shadowOffset": {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 16,
        }
      }
    >
      <Text>
        Hello
      </Text>
    </View>
  </View>
</View>
`;

exports[`ClayCard renders in expyrico 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255,255,255,0.06)",
          "borderRadius": 14,
          "padding": 18,
          "shadowColor": "rgba(0,0,0,0.35)",
          "shadowOffset": {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 24,
        }
      }
    >
      <Text>
        Hello
      </Text>
    </View>
  </View>
</View>
`;

exports[`ClayCard renders in material 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 16,
          "padding": 16,
          "shadowColor": "rgba(0,0,0,0.1)",
          "shadowOffset": {
            "height": 0,
            "width": NaN,
          },
          "shadowOpacity": 1,
          "shadowRadius": 0,
        }
      }
    >
      <Text>
        Hello
      </Text>
    </View>
  </View>
</View>
`;
